--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,5 @@
 <main>
-  <h1 class="title">Hello from Angular !</h1>
-
-  <!-- Images (and assets) are parsed and loaded from within the public directory -->
-  <img src="/img/logo.png">
+  <ba-sidebar></ba-sidebar>
 </main>
 <footer>
-  <a ng-href="{{app.url}}">Webpack Angular Starter</a>
 </footer>
